
v0.1.3, 2010-12-02:
1. Fixed that open and close methos dosen't works in real script.

v0.2.1, 2010-12-03:
1, added support for GeoIPASNum.dat binary data.
2, make org_by_addr method return an array of org name string.

v0.3.0, 2010-12-15:
1, All module now has asynchronous version method
2, When data is not match with module, throw an error object.
3, When not found  desired data, return an error string instead an error objerct.

v0.3.1, 2010-12-16:
1, Limit the length of the floating part of latitude and langitude to 6 digits.

v0.3.2, 2011-01-21:
1, add geoip.check(data) method
2, validate country binary data based on 8-types fingerprint.
3, support nodejs v0.3.6
4, make geoip.close(data) method sync style

v0.3.3, 2011-02-06:
1, drop support for nodejs 0.2.1, pass testing up to nodejs 0.3.8.
2, add geoip.filter method.
3, re-writed testing shell script.
4, If not found matched data, alway return null.
5, use index.js as default main module.
6, added github bug reporting address.

v0.3.3-1, 2011-02-12
1, make compatibility with nodejs v0.4.0 stable branch.

v0.3.4, 2011-02-15
1, new seekCountry algorithm, speedup to about 3x faster (Vladimir Dronnikov) 
2, added simple usage property
3, improve org_by_domain method output

v0.3.4-1, 2011-03-07
1, fixed cotinent typo

V0.4.0beta1, 2011-05-11
switch to geoip C library binding

v0.4.0beta2, 2011-05-15
1, added error checking in async methods
2, fixed latitude and longitude range problems
3, added city property in record object

v0.4.0rc, 2011-05-20
1, implemented basic ipv6 support in Country module
2, fixed vavious typos

v0.4.0, 2011-05-23
1, added country ipv6 samples
2, clear some redundant codes

v0.4.0final, 2011-05-24
1, change version to 0.4.0final

v0.4.1, 2011-06-21
1, build addon during installation not preinstall

v0.4.2, 2011-07-23
1, enbale update database on the fly
2, disable close method
3, removed all sleep function
4, always execute lookup in the main thread