@@ -77,3 +77,4 @@ v0.4.2, 2011-07-23
 2, disable close method
 3, removed all sleep function
 4, always execute lookup in the main thread
+5, separate county ipv6 into a indiviual module
